Add request and response DTOs